# expected-vaep-model

./: .gitignore  Build.sh  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/_analysis/: rolling_xvaep.ipynb
notebooks/exploratory/: exp_vaep_exploration.ipynb  plotting_actions.ipynb
notebooks/models/: train_models.ipynb
notebooks/process/: 0_chain_data_exploration.ipynb  1_data_preparation.ipynb  2_training_models.ipynb  3_predicting_models.ipynb  5_predict_player_stats.ipynb
src/: config.py  modelling_data_contract.py  score_new_data.py
src/expected_vaep_model/: config.py  modelling_data_contract.py  predict.py
src/expected_vaep_model/features/: build_features.py  data_preprocessor.py  preprocessing.py
src/expected_vaep_model/fonts/: fonts.py
src/expected_vaep_model/models/: hyperparameter_tuning.py  optuna_xgb_param_grid.py  predict_model.py  predict_player_stats.py  supermodel.py  train_model.py
src/expected_vaep_model/predict/: predict.py  predict_exp_vaep.py
src/expected_vaep_model/processing/: calculate_exp_vaep.py  convert_to_schema.py  data_preprocessor.py  formula.py  gamestate_features.py  merge_xscore_to_chains.py  response.py  types.py
src/expected_vaep_model/visualisation/: afl_colours.py  plot_team_rolling_averages.py
src/features/: build_features.py  formula.py  preprocessing.py
src/models/: predict_model.py
src/visualization/: explore.py  model_evaluation.py
(+5 files in other folders)
