[project]
name = "expected_vaep_model"
description = "Building and analysing an expected vaep model."
readme = "README.md"
license = {file = "LICENSE"}
version = "0.3.0"
authors = [
    { name = "Ciaran Grant", email = "ciaran.grant@hotmail.co.uk" }
]
requires-python = ">=3.11"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Repository" = "https://github.com/ciaran-grant/expected-vaep-model"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"